// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Constructor full set of parameters 1`] = `"http://localhost:3000"`;

exports[`Constructor no parameters 1`] = `
RestLogAdapter {
  "cacheDir": undefined,
  "headers": undefined,
  "inMemoryCache": [],
  "iv": "fun",
  "logger": EventLogger {
    "config": {
      "name": "RestLogAdapter",
      "parent": undefined,
    },
    "context": Context {
      "data": {},
      "name": "RestLogAdapter",
      "parent": Context {
        "data": {},
        "name": "__global",
        "parent": undefined,
      },
    },
    "events": [],
    "isBusy": false,
    "isReady": true,
    "parent": EventLogger {
      "config": {
        "name": "RestLogAdapter",
        "parent": undefined,
      },
      "context": Context {
        "data": {},
        "name": "RestLogAdapter",
        "parent": Context {
          "data": {},
          "name": "__global",
          "parent": undefined,
        },
      },
      "events": [],
      "isBusy": false,
      "isReady": true,
      "parent": EventLogger {
        "config": {
          "name": "__global",
          "parent": undefined,
        },
        "context": Context {
          "data": {},
          "name": "__global",
          "parent": undefined,
        },
        "events": [],
        "isBusy": false,
        "isReady": true,
        "parent": undefined,
      },
    },
  },
  "props": {},
  "sendBusy": false,
  "sendInterval": 120000,
  "url": undefined,
}
`;

exports[`log first call 1`] = `
[
  {
    "context": "test",
    "event": {
      "a": 1,
    },
  },
]
`;

exports[`log multiple calls 1`] = `
[
  {
    "context": "test",
    "event": {
      "a": 1,
    },
  },
  {
    "context": "test",
    "event": {
      "a": 2,
    },
  },
  {
    "context": "test",
    "event": {
      "a": 3,
    },
  },
]
`;
